...
    }
    
    // Setup TextField for reversing
    private func setupReversTextField() { // приватний метод встановлення текстфілда
        reversTextField.placeholder = "Text to reverse" // текст який відображається коли текстфілд пустий
        reversTextField.borderStyle = .roundedRect // задаю рамку обведення
        reversTextField.accessibilityIdentifier = "textField" // створюю індифікатор для Unit тестів
        
        view.addSubview(reversTextField) // додаю до супервʼю reversTextField
        
        reversTextField.snp.makeConstraints { make in // клоужер встановлення автолейота
            make.centerX.equalToSuperview() // розміщую центр reversTextField в центрі супервʼю
            make.top.equalTo(descriptionLabel.snp.bottom).offset(59) // відступ між верхньою стороною reversTextField та нижньою стороною descriptionLabel
            make.leading.trailing.equalToSuperview().inset(16) // за допомогою inset()одночаснно задаю констрейнти - та + тобто зліва та справа 16
        }
    }
    
    // Setup configuration segment
    private func setupConfigurationSegment() { // приватний метод для встановлення сегменту
        configurationSegment.insertSegment(withTitle: "Default", at: 0, animated: true) // Створюю опцію сегмента даю назву ідекс і додаю анімацію
        configurationSegment.insertSegment(withTitle: "Custom", at: 1, animated: true) // Створюю опцію сегмента даю назву ідекс і додаю анімацію
        configurationSegment.selectedSegmentIndex = 0 // задаю опція по замовчуванню
        configurationSegment.accessibilityIdentifier = "segmentControl" // індефікатор для Unit тестів
        configurationSegment.addTarget(self, action: #selector(segmentChanged), for: .valueChanged) // додаю обробник подій
        // self це обʼєкт що буде обробляти подію тобто тут це поточний клас MainViewController
        // action - селектор що вказує на метод segmentChanged, який буде викликаний при зміні вибору сегмента
        // for: .valueChanged  тип події яка спрацьовує коли вибір сегмента зміниться
        
        view.addSubview(configurationSegment) // додаю на супервʼю configurationSegment
...
    }
    
    // Setup IgnoreTextField
    private func setupIgnoreTextField() { // приватний метод для встановлення текстфілда який буде у стані дефолт
        ignoreTextField.placeholder = "Text to ignore" // плейсхолдер
        ignoreTextField.borderStyle = .roundedRect // обводка таж шо я писав у горі
        ignoreTextField.accessibilityIdentifier = "customTextField" // індифікатор для юніт теістів
        
        ignoreTextField.addTarget(self, action: #selector(textFieldDidChange(_:)), for: .editingChanged)
        // додаю обробник подій для текстового поля
        // action: #selector(textFieldDidChange(_:)) метод який буде викликаний після виклку події editingChanged
        //.editingChanged тип події яка спрацьовує при зміні тексту в ignoreTextField подія editingChanged викликається кожного разу коли текст у текстовому полі змінюється тобто при кожному введенні символу та видаленні символу
        
...
        }
    }
    
    // Setup ReversedTextLabel
    private func setupReversedTextLabel() { // метод для встановлення реверснутого тексту у скролвʼю
        reversedTextLabel.font = UIFont.systemFont(ofSize: 24) // розмір шрифту
        reversedTextLabel.accessibilityIdentifier = "reverseText" // індифікатор для юніт тестів
        
        reversedTextScrollView.addSubview(reversedTextLabel) // додаю у reversedTextScrollView лейбл reversedTextLabel
        
        reversedTextLabel.snp.makeConstraints { make in // клоужер для обмежень
            make.bottom.equalTo(reversedTextScrollView.snp.bottom) // роблю нижній край reversedTextLabel рівний нижньому краю reversedTextScrollView
            make.top.equalTo(reversedTextScrollView.snp.top) // роблю верхній край reversedTextLabel рівний верхньому краю reversedTextScrollView
...
